@@ -1,3 +1,10 @@
+2005-06-18  Bernhard Walle <bernhard.walle@gmx.de>
+	* make ParportList a singleton object, so ieee1284_find_ports
+	  is only called once, this doesn't reset other parallel ports
+	  (that are currently unsued) at each measure which is
+	  useful if you have avrdude and keep it connected with the
+	  schematic
+
 2005-06-17  Bernhard Walle <bernhard.walle@gmx.de>
 	* Changed documentation to use Qt Assistant on all plattforms
 	* Removed browser settings
